# Simple-Mall

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
apps/account/: form.py  models.py  serializer.py  urls.py  views.py
apps/front/: admin.py  apps.py  models.py  urls.py  views.py
apps/front/management/commands/: init-front.py
apps/front/templatetags/: web_info.py
apps/item/: admin.py  apps.py  models.py
apps/item/management/commands/: init-goods.py
apps/trade/: admin.py  apps.py  models.py  urls.py  views.py
core/: __init__.py  exception.py  middleware.py  serializer.py  settings.py  urls.py
templates/auth/: base.html  login.html  register.html
templates/home/: base.html  index.html  item.html  profile.html
utils/: Pay.py
