[project]
name = "default-template-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2",
    "django-simpleui>=2026.1.13",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.2.0",
    "loguru>=0.7.3",
    "pymysql>=1.1.2",
    "python-decouple>=3.8",
    "requests>=2.33.0",
]
